the app now is working almost perfectly.

--- a/templates/include/head.html.twig
+++ b/templates/include/head.html.twig
@@ -1,6 +1,8 @@
    <head>
         <meta charset="UTF-8">
         <title>Currency Calculator</title>
+        {# echo {{absolute_url('/public/cp.png')}};
+        <link rel="shortcut icon" type="image/png" href="{{ absolute_url('/public/cp.png') }}"/> #}
         {# bootstap css #}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
