--- a/templates/include/nav.html.twig
+++ b/templates/include/nav.html.twig
@@ -7,7 +7,7 @@
     <div class="navbar-nav">
       {# <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> #}
       <a class="nav-item nav-link" href="/changeCurrency">Change currency</a>
-      <a class="nav-item nav-link" href="#">Add currency</a>
+      <a class="nav-item nav-link" href="/editCurrency">Edit currency</a>
       {# <a class="nav-item nav-link" href="#">Pricing</a>
       <a class="nav-item nav-link disabled" href="#">Disabled</a> #}
     </div>
