make the vue.js to work

--- a/templates/include/nav.html.twig
+++ b/templates/include/nav.html.twig
@@ -8,7 +8,8 @@
       {# <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> #}
       <a class="nav-item nav-link" href="/changeCurrency">Change currency</a>
       <a class="nav-item nav-link" href="/editCurrency">Edit currency</a>
-      {# <a class="nav-item nav-link" href="#">Pricing</a>
+      <a class="nav-item nav-link" href="/test">Vue</a>
+      {# < class="nav-item nav-link" href="#">Pricing</>
       <a class="nav-item nav-link disabled" href="#">Disabled</a> #}
     </div>
   </div>
